# spectacles

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  SECURITY.md  config.example.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
blahblah/queries/: jaffle_shop__fct_orders.sql
branch_comparison/: diff_results.py  generate_async_results.py  generate_master_results.py  run.sh  scenarios.json
docs/: join2019_submisson.md
fonz/: __init__.py  cli.py  client.py  connection.py  exceptions.py  logger.py  lookml.py  printer.py  runner.py  utils.py  validators.py
fonz/tests/: constants.py  mock.py  test_cli.py  test_connection.py  test_utils.py
scripts/: detect_cassette_secrets.bash  detect_cassette_secrets.zsh
spectacles/: __init__.py  cli.py  client.py  exceptions.py  hierarchy.py  logger.py  lookml.py  models.py  printer.py  project_select.py  runner.py  select.py  tracking.py  types.py  utils.py  validators.py
spectacles/validators/: __init__.py  content.py  data_test.py  lookml.py  sql.py  validator.py
tests/: conftest.py  constants.py  mock.py  test_branch_manager.py  test_branches.py  test_cli.py  test_client.py  test_connection.py  test_content_validator.py  test_data_test_validator.py  test_logger.py  test_lookml.py  test_lookml_validator.py  test_printer.py  test_runner.py  test_select.py  test_sql_validator.py  test_tracking.py  test_utils.py  utils.py
tests/cassettes/: init_client.yaml  init_github.yaml  init_runner.yaml
tests/cassettes/test_branch_manager/: test_manage_current_branch.yaml  test_manage_current_branch_with_import_projects.yaml  test_manage_current_branch_with_ref.yaml  test_manage_other_branch.yaml  test_manage_other_branch_with_import_projects.yaml  test_manage_other_branch_with_ref.yaml  test_manage_other_branch_with_ref_import_projects.yaml  test_manage_prod_with_advanced_deploy.yaml  test_manage_with_ref_import_projects.yaml  test_manage_with_ref_not_present_in_local_repo.yaml  (+2 more)
tests/integration/: conftest.py  test_branch_manager.py  test_client.py  test_content_validator.py  test_data_test_validator.py  test_lookml.py  test_lookml_validator.py  test_runner.py  test_sql_validator.py
tests/resources/: response_dimensions.json  response_models.json  validation_schema.json
tests/unit/: conftest.py  test_branch_manager.py  test_cli.py  test_client.py  test_client_unit.py  test_content_validator.py  test_logger.py  test_lookml.py  test_lookml_unit.py  test_printer.py  test_query.py  test_runner.py  test_select.py  test_sql_validator.py  test_sql_validator_unit.py  test_tracking.py  test_types.py  test_types_unit.py  test_utils.py
tests/vcr/: test_branch_manager_vcr.py  test_client_vcr.py  test_lookml_vcr.py  test_sql_validator_vcr.py
(+88 files in other folders)
