[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[coverage:report]
exclude_lines =
  pragma: no cover
  logger.
  __repr__

[tool:pytest]
python_files = tests/*.py

[pydocstyle]
convention = google
add-ignore = D100,D107,D202

[flake8]
exclude = .git,__pycache__,docs,build,dist
max-line-length = 88
builtins = unicode
tee = True
select = C,E,F,W,B,B950
ignore = E203,E501,W503

[mypy]
plugins = pydantic.mypy